all user endpoints done
